12/10/2004  version 0.3 pre6    Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug that tried to create a new instance of a main class
      even if the jar wasn't a plugin
    * Updated logic to created the options panels for plugins

12/08/2004  version 0.3 pre5    Ian Lewis <IanLewis@member.fsf.org>

    * Updated the ant build document.
    * jsXe now loads a plugin's properties
    * Added support for ActionPlugins

12/07/2004  version 0.3 pre4    Ian Lewis <IanLewis@member.fsf.org>

    * Added view plugin support. Branched off the views into their own
      source trees.
    * Updated the Tree view to be a plugin

11/30/2004  version 0.3 pre3    Ian Lewis <IanLewis@member.fsf.org>

    * Added some more code for the SchemaView. jsXe will require JGraph for a
      bit, until views become plugins and are moved into their own jars.
    * Added some code for loading plugins
    * Added new interfaces for the plugin API. The plugin API will have
      ViewPlugins and ActionPlugins. ActionPlugins are plugins that add actions
      to jsXe, ViewPlugins are plugins consisting of a view in the editor and
      are themselves ActionPlugins.
      
11/24/2004  version 0.3 pre2    Ian Lewis <IanLewis@member.fsf.org>

    * Changed how the tree editor and renderers work so that the AdapterNode
      doesn't have tree specific code in it.
    * Fixed bug in the find and replace dialog that caused a null pointer
      exception.
    * Added an 'Ignore Case' Check box to the find dialog

11/23/2004  version 0.3 pre1    Ian Lewis <IanLewis@member.fsf.org>

    * Obsoleted the DefaultViewTreeNode class.

11/22/2004  version 0.2 beta    Ian Lewis <IanLewis@member.fsf.org>

    * Redid how the view human readable names are retrieved.
    * Added preliminary support for the schema view (not enabled).

10/8/2004   version 0.2 pre25   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug that didn't update the tab width for the source view when